# Study_RoomLayout

./: .gitignore  000_Architecture_Decisions.md  000_Pipeline_Overview.md  000_Progress_Tracker.md  001_Step01_ProjectSkeleton_Plan.md  001_Step01_ProjectSkeleton_Tracker.md  001_Step01_Skeleton_Plan.md  001_Step01_Skeleton_Tracker.md  002_Step02_CoreSchema_Plan.md  002_Step02_CoreSchema_Tracker.md  003_Step03_GeometryPipeline_Plan.md  003_Step03_GeometryPipeline_Tracker.md  003_Step03_Visualization_Plan.md  003_Step03_Visualization_Tracker.md  004_Step04_AlgorithmCore_Plan.md  004_Step04_AlgorithmCore_Tracker.md  004_Step04_ApartmentFixtures_Plan.md  004_Step04_ApartmentFixtures_Tracker.md  005_Step05_GeometryKernel_Plan.md  005_Step05_GeometryKernel_Tracker.md  005_Step05_ProgramLayer_Plan.md  005_Step05_ProgramLayer_Tracker.md  006_Step06_ProgramConstraintEngine_Plan.md  006_Step06_ProgramConstraintEngine_Tracker.md  006_Step06_TargetRules_Plan.md  006_Step06_TargetRules_Tracker.md  007_Step07_EntryPoint_Plan.md  007_Step07_EntryPoint_Tracker.md  008_Step08_SvgVisualization_Plan.md  008_Step08_SvgVisualization_Tracker.md  010_Step10_MultiFloor_Plan.md  010_Step10_MultiFloor_Tracker.md  12_zoning_clean.py  MIGRATION_LOG.md  README.md  RUNNING.md  final_showcase_all33.py  poc_split_before_corridor.py  pyproject.toml  room_layout_experiment_plan.md
.github/workflows/: ci.yml
algorithm/: PHASE7_Fixtures.md  PHASE8_Corridor.md  PORTABLE_CORE.md  README.md  demo.py
algorithm/celllayout/: __init__.py  cases.py  zoning.py
algorithm_testfield/: PHASE7_Fixtures.md  PHASE8_Corridor.md  README.md  demo.py
docs/: 000_Architecture_Decisions.md  000_Pipeline_Overview.md  000_Progress_Tracker.md  000_area_aware_growth.md  000_multifloor_access.md  000_typology_gate_applicability.md  auto_lir_progressive_algorithm_v3_1.md
experiments/: compare_p12_p20.py
fixtures/: apartment_diagonal.json  apartment_too_small.json
legacy/: 02M_per_family.py  12_compare.py  README.md
notebooks/: step03_viz_demo.ipynb  step04_fixture_overview.ipynb  step05_decomposition.ipynb
references/: README.md  cell_v3_2.py  lir_recursive_per_family_v3_2.md  zone_v12.py
scripts/: cell_fixtures_to_json.py  cell_growth_fixtures_to_json.py
tests/: _fixtures.py  _golden.py  conftest.py  fixture_matrix.py  test_constraints_gates.py  test_corridor_bridge.py  test_corridor_extra_targets.py  test_debug_run.py  test_fixtures_render_smoke.py  test_fixtures_roundtrip.py  test_geometry_decompose.py  test_geometry_grid.py  test_geometry_recursive.py  test_golden_comparator.py  test_golden_corpus_b.py  test_golden_house.py  test_golden_inputs.py  test_golden_per_stage.py  test_golden_run.py  test_growth_fixtures.py  test_house_typology.py  test_labeling.py  test_multi_floor_gates.py  test_orphan_absorb.py  test_palette.py  test_polygonize.py  test_program_request.py  test_room_gate.py  test_run.py  test_run_robustness.py  test_schema_failure.py  test_schema_geometry.py  test_schema_output.py  test_schema_program.py  test_schema_serialize.py  test_schema_target.py  test_schema_validators.py  test_serialize.py  test_smoke.py  test_stage00_load.py  (+30 more)
(+648 files in other folders)
