[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proto3"
version = "0.0.0"
description = "Spine-first floor layout generation framework (proto3)"
requires-python = ">=3.11"
dependencies = [
    "shapely>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["jupyter", "nbstripout", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
