[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "room_layout"
version = "0.1.0"
description = "Room layout generation component for the PlanBIM synthetic-BIM training-data pipeline."
requires-python = ">=3.10"
dependencies = [
    "shapely>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
viz = [
    "matplotlib>=3.7",
    "pillow>=10",  # make_gif() frame stitching (Step 08 §4.6 / S08-D3)
]

[tool.setuptools.packages.find]
where = ["src"]

# Ship the per-typology target-rules data (JSON + provenance README) inside the
# wheel/sdist so `TargetAdapter` / `DEFAULT_APARTMENT_RULES_PATH` resolve from
# an installed package, not just the source tree (Step 06 §4.7).
[tool.setuptools.package-data]
room_layout = ["data/target_rules/*.json", "data/target_rules/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# Put the repo root + src/ on sys.path so bare `pytest` (no editable install)
# resolves both the `tests._golden` helper (repo root) and the `room_layout`
# package (src/), not just `python -m pytest` after `pip install -e .`.
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 100
# `archive/` is the read-only predecessor-repo snapshot — never lint it.
# `outputs/` and `experiments/` are gitignored runtime directories.
# `legacy/` is the Step-archive target (also read-only after archival).
extend-exclude = [
    "archive",
    "outputs",
    "experiments",
    "legacy",
]

[tool.ruff.lint]
# Built-in defaults already cover E (pycodestyle) + F (pyflakes).
# Additions:
extend-select = [
    "I",   # isort — import sorting
    "UP",  # pyupgrade — modern Python syntax
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"
